/*
** EPITECH PROJECT, 2023
** Gfx
** File description:
** IMusic.hpp
*/
#pragma once

class IMusic 
{
  public:
    IMusic() = default;
    ~IMusic() = default;
};
