/*
** EPITECH PROJECT, 2023
** Gfx
** File description:
** Music.hpp
*/
#pragma once

#include "IMusic.hpp"
#include <iostream>

class Music : public IMusic {
  public:
    Music() = default;
};
