/*
** EPITECH PROJECT, 2023
** Gfx
** File description:
** ITexture.hpp
*/
#pragma once

class ITexture {
  public:
    ~ITexture() = default;
};
