/*
** EPITECH PROJECT, 2023
** Gfx
** File description:
** Texture.hpp
*/
#pragma once
#include "ITexture.hpp"

class Texture : public ITexture {
  public:
    ~Texture() = default;
};
