// header file for SDLTexture

#pragma once
#include "../../../Gfx/Texture/include/Texture.hpp"

class SDLTexture : public Texture {
  public:
    SDLTexture() = default;
};