// header file for SfmlTexture

#pragma once
#include "../../../Gfx/Texture/include/Texture.hpp"

class SFMLTexture : public Texture {
  public:
    SFMLTexture() = default;
};